# Parabolic-Realms

./: CMakeLists.txt  README.md
CMakeModules/: InstallConfig.cmake
codemp/: CMakeLists.txt
codemp/cgame/: CMakeLists.txt  cg_consolecmds.c  cg_cvar.c  cg_draw.c  cg_effects.c  cg_ents.c  cg_local.h  cg_main.c  cg_para.c  cg_para.h  cg_players.c  cg_public.h  cg_servercmds.c
codemp/client/: cl_cgameapi.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_uiapi.cpp  client.h  snd_mem.cpp
codemp/game/: CMakeLists.txt  NPC.c  NPC_spawn.c  NPC_stats.c  bg_local.h  bg_misc.c  bg_phys.cpp  bg_phys.h  bg_pmove.c  bg_public.h  bg_saber.c  bg_saberLoad.c  bg_vehicleLoad.c  bg_vehicles.h  g_active.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_cvar.c  g_fish.c  g_hook.c  g_local.h  g_main.c  g_misc.c  g_mover.c  g_para.c  g_para.h  g_public.h  g_session.c  g_spawn.c  g_specialspawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_vehicles.c  g_weapon.c  g_xcvar.h  w_force.c  (+1 more)
codemp/para/: para_cvar_def.h  para_xcommon.h  para_xcvar.h  pse_api.h  pse_incoming_export.h  pse_loader.c  pse_loader.h  pse_outgoing_import.h  pse_xincoming.h  pse_xoutgoing.h  scripting_engine.cpp  scripting_engine.hpp  scripting_engine_vm.h
codemp/qcommon/: cm_load.cpp  cm_local.h  cm_model.cpp  cm_patch.cpp  cm_patch.h  cm_phys.cpp  cm_public.h  common.cpp  cvar.cpp  files.cpp  game_version.h  msg.cpp  q_math.c  q_shared.h  qcommon.h  qfiles.h  vm.cpp
codemp/rd-common/: tr_common.h  tr_image_jpg.cpp  tr_image_load.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_public.h  tr_types.h
codemp/rd-dedicated/: G2_bones.cpp
codemp/rd-vanilla/: CMakeLists.txt  G2_bones.cpp  qgl.h  tr_WorldEffects.cpp  tr_backend.cpp  tr_cmds.cpp  tr_image.cpp  tr_init.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_paraload.cpp  tr_paraload.hpp  tr_scene.cpp  tr_shade.cpp  tr_shader.cpp  tr_sky.cpp  tr_surface.cpp
codemp/server/: sv_ccmds.cpp  sv_gameapi.cpp  sv_gameapi.h  sv_init.cpp
codemp/ui/: CMakeLists.txt  ui_force.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_saber.c  ui_shared.c  ui_xcvar.h
codepara/scripting/: CMakeLists.txt
codepara/scripting/dummy/: CMakeLists.txt  dummy.c
codepara/scripting/lua/: CMakeLists.txt  core.cpp
codepara/scripting/shared/: para_scripting_engine_api.h  pse_types.h
para/: CMakeLists.txt
para/scripting/: CMakeLists.txt
para/scripting/dummy/: CMakeLists.txt  dummy.c
para/scripting/shared/: para_scripting_engine_api.h
shared/sys/: sys_loadlib.h  sys_public.h  sys_unix.cpp
